# ardana-service

./: .copyrightignore  .gitignore  .gitreview  README.rst  buildPackage.sh  config.yml.example  gulpfile.js  index.js  input_model.rst  main.py  package.json  requirements.txt  runTests.sh  setup.cfg  setup.py  test-requirements.txt  test_socketio_client.py  tox.ini
ansible/: ready-install-os.yml
api/: app-config.js  config-processor.js  config.js  control-plane.js  cp-output.js  index.js  model.js  osinstall.js  playbooks.js  plays.js  resources.js  servers.js  templates.js
ardana_service/: __init__.py  admin.py  cobbler.py  compute.py  config.py  config_processor.py  defaults.cfg  encoder.py  keystone.py  listener.py  main.py  model.py  monasca.py  network.py  oneview.py  osinstall.py  packages.py  playbooks.py  plays.py  policy.py  servers.py  service.py  sshagent.py  suse_manager.py  templates.py  ui.py  util.py  versions.py
config/: config-defaults.yml  defaults.cfg  index.js
etc/: devtest.conf  policy-generator.conf
gulp/: closure-lint.js  jasmine.js  nodemon.js  unit-tests.js
lib/: ardana-process.js  config-processor.js  constants.js  current-input-model.js  graph-gen.js  keystone.js  logger.js  model-reader.js  model-writer.js  os-installer.js  process-manager.js  template-cache.js  tree-utils.js  utils.js  websocket-server.js
misc/: setup-env.sh
mock-api/: index.js  model.js  os-install.js  plays.js
test/: build_venv.sh  setupTests.sh  test-playbook.yml
tests/: test_admin.py  test_json_encoding.py  test_model.py  test_monasca.py  test_playbooks.py  test_service.py  test_utils.py
tools/: cobbler_report.txt  cobbler_systems.json  compute-mock-data.json  config-generator.conf  deployed_hostnames.json  endpoints.json  mock-cmd  packages.json  (+4 more)
(+48 files in other folders)
