# (c) Copyright 2017-2018 SUSE LLC
[metadata]
classifier =
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5

[global]
test_suite = tests

[files]
packages = ardana_service
