# (c) Copyright 2017-2018 SUSE LLC

[metadata]
name = ardana-service
summary = OpenStack Ardana Lifecycle Management Server
description-file =
	README.rst
author = SUSE
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5

[global]
setup-hooks =
	pbr.hooks.setup_hook

test_suite = tests

[files]
packages = ardana_service

[entry_points]
oslo.config.opts =
    ardana_service = ardana_service.config:list_opts
console_scripts =
    ardana-service = ardana_service.main:main
# Declare entry points for policy file generation.  For more details, see:
# https://docs.openstack.org/oslo.policy/1.23.0/usage.html#registering-policy-defaults-in-code
oslo.policy.policies =
    ardana-service = ardana_service.policy:list_rules
oslo.policy.enforcer =
    ardana-service = ardana_service.policy:get_enforcer
